--- a/PA9_Teh.vcxproj
+++ b/PA9_Teh.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="defines.hpp" />
+    <ClInclude Include="Pieces.hpp" />
     <ClInclude Include="position.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
