--- a/PA9_Teh.vcxproj.filters
+++ b/PA9_Teh.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="defines.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Pieces.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
